[artf501572, artf500994] : Image icon appears in the build popup in IE9 browser, Safari 5.1.7 ,IE9 and Chrome Browser -In the build Page,Progress is not in proper alignment issues fixed

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -4802,3 +4802,16 @@ a[id='androidSigning']:hover {
 	margin: 0 auto; 
 	height: 22px;
 }
+
+.popupLoadingIcon {
+    position: relative;
+    display: none;
+}
+
+#clipboard {
+    height: 21px; 
+    width: 21px; 
+    cursor: pointer;
+    float: right;
+    margin-right: 10px;
+}
